<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".activity.MainActivity">

    <TextView
            android:id="@+id/tv_win"
            android:text="@string/wins_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tv_loss"
            android:text="@string/losses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@id/tv_win"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/tv_money"
            android:text="@string/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@id/tv_loss"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/tv_bet"
            android:text="@string/current_bet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@id/tv_money"
            app:layout_constraintStart_toStartOf="parent"/>


</android.support.constraint.ConstraintLayout>