<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
            android:id="@+id/email"
            android:text="@string/user"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/money"
    />

    <TextView
            android:id="@+id/money"
            android:text="@string/money_no_colon"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/email"
            app:layout_constraintEnd_toStartOf="@id/win_loss_ratio"
            android:layout_marginStart="20dp"
    />
    <TextView
            android:id="@+id/win_loss_ratio"
            android:text="@string/wins_losses"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/money"
            app:layout_constraintEnd_toEndOf="parent"/>


    <android.support.v7.widget.RecyclerView
            android:id="@+id/leader_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email"
    >

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>